<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TumeKyouen</string>

    <string name="puzzle">start</string>
    <string name="get_more">get more</string>
    <string name="get_more_loading">loading</string>
    <string name="create_stage">create stage</string>
    <string name="twitter_connect">Sign in with Twitter</string>
    <string name="sync_stage_user">sync stages</string>
    <string name="stage_count">%1$d/%2$d</string>
    <string name="privacy_link"><u>Privacy Policy</u></string>

    <string name="button_prev">prev</string>
    <string name="button_next">next</string>
    <string name="check_kyouen">Check kyouen</string>
    <string name="stage_no">STAGE:%d</string>
    <string name="creator">created by %s</string>
    <string name="text_initializing">initializing&#8230;</string>
    <string name="text_x10">x10</string>

    <string name="alert_less_stone">Select 4 stones.</string>
    <string name="alert_not_kyouen">Not kyouen.</string>
    <string name="alert_install_kyouenchecker">Do you install kyouenchecker?</string>
    <string name="alert_error_authenticate_twitter">Twitter authentication is failed.</string>
    <string name="alert_error_sync">Syncing clear data is failed.</string>

    <string name="dialog_title_stage_get">Get stages</string>
    <string name="dialog_title_stage_select">Select stage</string>
    <string name="dialog_stage_count">stage count</string>
    <string name="dialog_stage_no">stage no</string>
    <string name="dialog_all_check">All</string>
    <string name="dialog_first">first</string>
    <string name="dialog_last">last</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_get">get</string>
    <string name="dialog_select">select</string>

    <string name="kyouen">Kyouen!!</string>

    <string name="toast_get_stage">get %1$d stage(s).</string>
    <string name="toast_no_stage">No available data.</string>
    <string name="toast_fetch_first">Please tap \"GET MORE\" first.</string>

    <string name="notification_new_stage">New stage added.</string>
    <string name="channel_name_default">New stage notification</string>

    <string name="create_back_one_step">back one step</string>
    <string name="create_reset">reset</string>
    <string name="create_send_stage">send stage</string>

    <string name="create_send_title">Kyouen!!</string>
    <string name="create_send_message">Input your name for submit.</string>
    <string name="create_send_loading">Sending...</string>
    <string name="create_send_success_message">Submitted stage as No. %s.</string>

    <string name="create_result_registered">Registered.</string>
    <string name="create_result_failure">Failed.</string>
</resources>
