<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="hm.orz.chaos114.android.tumekyouen.modules.create.CreateActivity">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4A9E3D">

            <hm.orz.chaos114.android.tumekyouen.modules.create.CreateKyouenView
                android:id="@+id/kyouen_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <hm.orz.chaos114.android.tumekyouen.modules.common.OverlayView
                android:id="@+id/overlay_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/back_one_step_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_back_one_step"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/send_stage_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_send_stage"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</layout>
