<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handlers"
            type="hm.orz.chaos114.android.tumekyouen.modules.title.TitleActivityHandlers"/>

        <variable
            name="model"
            type="hm.orz.chaos114.android.tumekyouen.modules.title.TitleActivityViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_background"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="30dp"
                android:shadowColor="#000000"
                android:shadowRadius="5.0"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="42sp"/>

            <Button
                android:id="@+id/start_puzzle_button"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/title_button"
                android:gravity="center"
                android:onClick="@{handlers.onClickStartButton}"
                android:padding="5dp"
                android:text="@string/puzzle"
                android:textColor="#eeeeee"/>

            <TextView
                android:id="@+id/stage_count"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:shadowColor="#000000"
                android:shadowRadius="5.0"
                android:text="@{model.displayStageCount}"
                android:textColor="#FFFFFF"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/get_stage_button"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/title_button"
                android:gravity="center"
                android:onClick="@{handlers.onClickGetStage}"
                android:padding="5dp"
                android:text="@string/get_more"
                android:textColor="#eeeeee"/>

            <Button
                android:id="@+id/create_stage_button"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/title_button"
                android:onClick="@{handlers.onClickCreateStage}"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/create_stage"
                android:textColor="#eeeeee"/>

            <FrameLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/connect_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/title_button"
                    android:onClick="@{handlers.onClickConnectButton}"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/twitter_connect"
                    android:textColor="#eeeeee"/>

                <Button
                    android:id="@+id/sync_button"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/title_button"
                    android:gravity="center"
                    android:onClick="@{handlers.onClickSyncButton}"
                    android:padding="5dp"
                    android:text="@string/sync_stage_user"
                    android:textColor="#eeeeee"
                    android:visibility="invisible"/>
            </FrameLayout>

            <ImageView
                android:id="@+id/sound_button"
                android:layout_width="36dp"
                android:onClick="@{handlers.switchPlayable}"
                android:layout_height="36dp"
                android:layout_marginLeft="90dp"
                android:src="@{model.soundResource}"/>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"/>
    </LinearLayout>
</layout>
