<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="hm.orz.chaos114.android.tumekyouen.modules.kyouen.KyouenActivityHandlers"/>

        <variable
            name="stageModel"
            type="hm.orz.chaos114.android.tumekyouen.modules.kyouen.KyouenActivityViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/title_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/stage_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/title_button"
                android:clickable="@{stageModel.hasPrev()}"
                android:onClick="@{handlers.onClickMoveStage}"
                android:padding="5dp"
                android:text="@string/button_prev"
                android:textColor="#eeeeee"/>

            <LinearLayout
                android:id="@+id/stage_no_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:onClick="@{handlers.showSelectStageDialog}"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stage_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{stageModel.titleStageNo}"
                    android:textColor="@{stageModel.stageNoTextColor}"
                    android:textSize="28sp"
                    tools:text="STAGE:300"/>

                <TextView
                    android:id="@+id/stage_creator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@{stageModel.titleCreator}"
                    android:textColor="@{stageModel.stageNoTextColor}"
                    android:textSize="10sp"
                    tools:text="created by no name"/>
            </LinearLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/title_button"
                android:onClick="@{handlers.onClickMoveStage}"
                android:padding="5dp"
                android:text="@string/button_next"
                android:textColor="#eeeeee"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4A9E3D">

            <LinearLayout
                android:id="@+id/fragment_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>

            <hm.orz.chaos114.android.tumekyouen.modules.kyouen.OverlayView
                android:id="@+id/kyouen_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">
            </hm.orz.chaos114.android.tumekyouen.modules.kyouen.OverlayView>
        </FrameLayout>

        <Button
            android:id="@+id/kyouen_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/title_button"
            android:onClick="@{handlers.onClickCheckKyouen}"
            android:padding="5dp"
            android:text="@string/check_kyouen"
            android:textColor="#eeeeee"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/unit_id"/>
    </LinearLayout>
</layout>
